--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "engines": {
+  "engines":{
     "node": "22.12.0"
   },
   "dependencies": {
     "cloudinary": "^2.7.0",
     "connect-mongo": "^5.1.0",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.0.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
@@ -25,9 +25,9 @@
   },
   "name": "full_stack_project",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Shalini Rajput",
